fixed background image position on mobile

--- a/style-home.css
+++ b/style-home.css
@@ -83,7 +83,7 @@ nav {
     background: #000;
     background-position: 50%;
     background-size: cover;
-    width: 100vh;
+    width: 100%;
     height: 100vh;
     overflow: hidden;
 }
@@ -93,7 +93,7 @@ nav {
     position: absolute;
     top: 0;
     height: 100%;
-    width: 100vh;
+    width: 100%;
     object-fit: cover;
 }
 
